Fix queue order not reflecting reality in some circumstances

BUG: 308579